--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,10 @@
         }
     ],
     "minimum-stability": "stable",
-    "require": {}
+    "require": {},
+    "autoload": {
+        "psr-0": {
+            "SeerUK\\Hal": "src/"
+        }
+    }
 }
