--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {},
     "autoload": {
         "psr-0": {
-            "SeerUK\\Hal": "src/"
+            "SeerUK\\Hal\\": "src/"
         }
     }
 }
