Added JMS serializer support.

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         }
     ],
     "minimum-stability": "stable",
-    "require": {},
+    "require": {
+        "jms/serializer": "0.16.*"
+    },
     "autoload": {
         "psr-0": {
             "SeerUK\\Hal\\": "src/"
